<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    一至三-->
    <RadioGroup
        android:id="@+id/know_pop_ot"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <RadioButton
            android:id="@+id/one"
            android:background="@drawable/bg_select"
            android:button="@null"
            android:text="@string/onegradle"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <RadioButton
            android:id="@+id/two"
            android:layout_marginLeft="25dp"
            android:background="@drawable/bg_select"
            android:button="@null"
            android:text="@string/twogradle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <RadioButton
            android:id="@+id/three"
            android:layout_marginLeft="25dp"
            android:background="@drawable/bg_select"
            android:button="@null"
            android:text="@string/threegradle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />


    </RadioGroup>
    <RadioGroup
        android:layout_marginTop="20dp"
        android:id="@+id/know_pop_fs"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/know_pop_ot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <RadioButton
            android:id="@+id/four"
            android:background="@drawable/bg_select"
            android:button="@null"
            android:text="@string/fourgradle"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <RadioButton
            android:id="@+id/five"
            android:layout_marginLeft="25dp"
            android:background="@drawable/bg_select"
            android:button="@null"
            android:text="@string/fivegradle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <RadioButton
            android:id="@+id/six"
            android:layout_marginLeft="25dp"
            android:background="@drawable/bg_select"
            android:button="@null"
            android:text="@string/sixgradle"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />


    </RadioGroup>

<Button
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="15dp"
    app:layout_constraintTop_toBottomOf="@id/know_pop_fs"

    android:id="@+id/know_pop_clear"
    android:text="@string/clear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<Button
    android:id="@+id/know_pop_complete"
    app:layout_constraintTop_toBottomOf="@id/know_pop_fs"
    app:layout_constraintLeft_toRightOf="@id/know_pop_clear"
    android:layout_width="0dp"
    android:layout_marginTop="15dp"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:text="@string/complete"
    android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>