<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<TextView
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/hotmodel"
    android:textSize="20sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
<RadioGroup
    android:id="@+id/top"
    app:layout_constraintTop_toTopOf="parent"
   android:layout_marginTop="40dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
        android:id="@+id/model_one"
        android:background="@drawable/bg_select"
        android:button="@null"
        android:text="应用题"
        android:layout_weight="1"
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />
    <RadioButton
        android:id="@+id/model_two"
        android:layout_marginLeft="25dp"
        android:background="@drawable/bg_select"
        android:button="@null"
        android:text="几何"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />
    <RadioButton
        android:id="@+id/model_three"
        android:layout_marginLeft="25dp"
        android:background="@drawable/bg_select"
        android:button="@null"
        android:text="计算"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />
    <RadioButton
        android:id="@+id/model_four"
        android:layout_marginLeft="25dp"
        android:background="@drawable/bg_select"
        android:button="@null"
        android:text="数字敏感度之攀升"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />
</RadioGroup>
    <RadioGroup
android:id="@+id/four_group"
     app:layout_constraintTop_toBottomOf="@id/top"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/model_five"
            android:background="@drawable/bg_select"
            android:button="@null"
            android:text="四年级知识点"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <RadioButton
            android:id="@+id/model_six"
            android:layout_marginLeft="25dp"
            android:background="@drawable/bg_select"
            android:button="@null"
            android:text="五年级知识点"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <RadioButton
            android:id="@+id/model_seven"
            android:layout_marginLeft="25dp"
            android:background="@drawable/bg_select"
            android:button="@null"
            android:text="六年级知识点"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
    </RadioGroup>
    <Button
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toBottomOf="@id/four_group"

        android:id="@+id/model_pop_clear"
        android:text="@string/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/model_pop_complete"
        app:layout_constraintTop_toBottomOf="@id/four_group"
        app:layout_constraintLeft_toRightOf="@id/know_pop_clear"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/complete"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>